# pdfXplode

./: .gitignore  README.md  meson.build
requirements/: base.txt
src/: CropWidget.cpp  CropWidget.h  InputImage.cpp  InputImage.h  InputPDF.cpp  InputPDF.h  InputPage.cpp  InputPage.h  Linked2DSpinBox.cpp  Linked2DSpinBox.h  MainWindow.cpp  MainWindow.h  ScaledSpinBox.cpp  ScaledSpinBox.h  Unit.h  UnitsComboBox.cpp  UnitsComboBox.h  main.cpp  print.cpp  print.h
src/main/python/: inputImage.py  inputPDF.py  main.py  outputPDF.py  units.py
